[gd_scene load_steps=4 format=3 uid="uid://3x0kjiu7lqg7"]

[ext_resource type="Script" path="res://Scenes/ContentManager/Mapeditor/Scripts/mapeditortile.gd" id="1_7fypm"]
[ext_resource type="Texture2D" uid="uid://c8ragmxitca47" path="res://Scenes/ContentManager/Mapeditor/Images/emptyTile.png" id="2_rued1"]
[ext_resource type="Texture2D" uid="uid://bgfsgh157p5lj" path="res://Scenes/ContentManager/Mapeditor/Images/areatile.png" id="3_tmbnb"]

[node name="mapeditortile" type="Control"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 3
anchors_preset = 0
offset_right = 128.0
offset_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_7fypm")

[node name="TileSprite" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_rued1")
expand_mode = 3

[node name="ObjectSprite" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 2
stretch_mode = 4

[node name="AreaSprite" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_tmbnb")
expand_mode = 2
stretch_mode = 4

[connection signal="gui_input" from="TileSprite" to="." method="_on_texture_rect_gui_input"]
[connection signal="mouse_entered" from="TileSprite" to="." method="_on_texture_rect_mouse_entered"]
[connection signal="resized" from="TileSprite" to="." method="_on_texture_rect_resized"]
[connection signal="gui_input" from="ObjectSprite" to="." method="_on_texture_rect_gui_input"]
[connection signal="mouse_entered" from="ObjectSprite" to="." method="_on_texture_rect_mouse_entered"]
